--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "content-automation-pipeline"
 version = "1.0.0"
 description = "Production-grade NLP-driven content automation with adaptive intelligence"
-authors = [{ name = "Mohammad Atashi", email = "mohammadaliatashi@icloud.com" }]
+authors = ["Mohammad Atashi <mohammadaliatashi@icloud.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/TensorScholar/content-automation-pipeline"
@@ -23,10 +23,11 @@ classifiers = [
 python = "^3.11"
 fastapi = "^0.104.1"
 uvicorn = {extras = ["standard"], version = "^0.24.0"}
+gunicorn = "^21.2.0"
 pydantic = "^2.5.0"
-asyncpg = "^0.29.0"
+asyncpg = {extras = ["psycopg2-binary"], version = "^0.30.0"}
 redis = "^5.0.1"
-celery = "^5.3.4"
+celery = {extras = ["redis"], version = "^5.3.6"}
 sentence-transformers = "^2.2.2"
 spacy = "^3.7.2"
 openai = "^1.3.7"
@@ -39,6 +40,12 @@ tenacity = "^8.2.3"
 prometheus-client = "^0.19.0"
 httpx = "^0.25.2"
 python-dotenv = "^1.0.0"
+dependency-injector = "^4.41.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.6"
+sqlalchemy = "^2.0.44"
+pydantic-settings = "^2.11.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
@@ -50,6 +57,10 @@ isort = "^5.12.0"
 mypy = "^1.7.1"
 flake8 = "^6.1.0"
 pre-commit = "^3.5.0"
+locust = "^2.20.0"
+
+[tool.poetry.scripts]
+load-test = "locust.main:main"
 
 [tool.black]
 line-length = 100
