--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@
 # ----------------------------------------------------------------------------
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+gunicorn==21.2.0
 pydantic==2.5.0
 python-multipart==0.0.6
 starlette==0.27.0
@@ -23,19 +24,20 @@ sqlalchemy==2.0.23
 # ----------------------------------------------------------------------------
 # Task Queue
 # ----------------------------------------------------------------------------
-celery==5.3.4
+celery[redis]==5.3.6
 flower==2.0.1
 kombu==5.3.4
 
 # ----------------------------------------------------------------------------
 # NLP & Machine Learning
 # ----------------------------------------------------------------------------
-sentence-transformers==2.2.2
+sentence-transformers>=5.1.0
 spacy==3.7.2
-transformers==4.35.2
-torch==2.1.1
-numpy==1.24.3
+transformers>=4.41.0
+torch>=2.2.0
+numpy>=1.24.0
 scikit-learn==1.3.2
+pydantic-settings>=2.0.0
 
 # ----------------------------------------------------------------------------
 # LLM Integration
@@ -58,7 +60,6 @@ httpx==0.25.2
 # Data Processing
 # ----------------------------------------------------------------------------
 pandas==2.1.3
-pydantic==2.5.0
 python-dateutil==2.8.2
 
 # ----------------------------------------------------------------------------
@@ -69,6 +70,7 @@ python-dotenv==1.0.0
 tenacity==8.2.3
 aiofiles==23.2.1
 pyyaml==6.0.1
+dependency-injector>=4.40.0
 
 # ----------------------------------------------------------------------------
 # Monitoring & Observability
@@ -86,6 +88,7 @@ pytest-cov==4.1.0
 pytest-mock==3.12.0
 hypothesis==6.92.1
 faker==20.1.0
+locust==2.20.0
 
 # ----------------------------------------------------------------------------
 # Code Quality (Development)
@@ -102,6 +105,7 @@ pylint==3.0.3
 cryptography==41.0.7
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt>=4.0.0,<5.0.0
 
 # ----------------------------------------------------------------------------
 # Documentation
