perf(db): Optimize vector storage using native pgvector-asyncpg driver
This commit refactors the entire data access pipeline to eliminate
inefficient string-based storage of vector embeddings.

- Added `pgvector` dependency to `pyproject.toml`.

- Configured `DatabaseManager` to automatically register the `pgvector`
  type handler with `asyncpg` on new connections.

- Refactored `RulebookManager`, `ProjectRepository`, and
  `seed_best_practices.py` to stop converting `numpy.ndarray` vectors
  to strings (`.tolist()`, `f"[{...}]") before database insertion.

- All vector parameters are now passed directly as `numpy` objects,
  allowing the driver to use the efficient binary transfer protocol.

- Updated vector queries to use correct parameter binding.

This change significantly reduces database storage, improves query
and insertion performance, and ensures floating-point precision
for all semantic vector operations.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.6"
 sqlalchemy = "^2.0.44"
 pydantic-settings = "^2.11.0"
+pgvector = "^0.3.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
